crates/cockpitctl-sarif/tests/snapshots/snapshot_structure_tests__sarif_with_help_and_url.snap
---
source: crates/cockpitctl-sarif/tests/snapshot_structure_tests.rs
expression: sarif
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0",
          "rules": [
            {
              "id": "sec/vuln",
              "shortDescription": {
                "text": "[scanner] sec/vuln"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "sec/vuln",
          "level": "error",
          "message": {
            "text": "Critical vulnerability found"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "Cargo.lock"
                },
                "region": {
                  "startLine": 100,
                  "startColumn": 1
                }
              }
            }
          ],
          "fingerprints": {
            "cockpitctl/v1": "fp_vuln_001"
          }
        }
      ]
    }
  ]
}
